--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>helloworld</tittle>
+<title>helloworld</title>
 </head>
-<body>
-Hello,world!!!
-</body>
+<body>Hello,world!!!</body>
 </html>
