--- a/hello.html
+++ b/hello.html
@@ -1,5 +1,8 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>helloworld</title>
+</head>
+<body>
 Hello,world!!!
-
-Я учусь работать с Git
-Git -система управления версиями с распределенной архитектурой
-GitHub - служба размещения в Интернете репозиториев Git 
+</html>
